--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/rs-lang/favicon.ico"/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="RSLang" content="Web site created using create-react-app"/><title>RS-Lang</title>    <script type="text/javascript">
-  // Single Page Apps for GitHub Pages
-  // MIT License
-  // https://github.com/rafgraph/spa-github-pages
-  // This script checks to see if a redirect is present in the query string,
-  // converts it back into the correct url and adds it to the
-  // browser's history using window.history.replaceState(...),
-  // which won't cause the browser to attempt to load the new url.
-  // When the single page app is loaded further down in this file,
-  // the correct url will be waiting in the browser's history for
-  // the single page app to route accordingly.
-  (function(l) {
-    if (l.search[1] === '/' ) {
-      var decoded = l.search.slice(1).split('&').map(function(s) { 
-        return s.replace(/~and~/g, '&')
-      }).join('?');
-      window.history.replaceState(null, null,
-          l.pathname.slice(0, -1) + decoded + l.hash
-      );
-    }
-  }(window.location))
-</script><script defer="defer" src="/rs-lang/static/js/main.6a3d4e31.js"></script><link href="/rs-lang/static/css/main.f7ba946a.css" rel="stylesheet"></head><body><div id="app-root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/rs-lang/favicon.ico"/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="RSLang" content="Web site created using create-react-app"/><title>RSLang</title>
+  <script type="text/javascript">
+    // Single Page Apps for GitHub Pages
+    // MIT License
+    // https://github.com/rafgraph/spa-github-pages
+    // This script checks to see if a redirect is present in the query string,
+    // converts it back into the correct url and adds it to the
+    // browser's history using window.history.replaceState(...),
+    // which won't cause the browser to attempt to load the new url.
+    // When the single page app is loaded further down in this file,
+    // the correct url will be waiting in the browser's history for
+    // the single page app to route accordingly.
+    (function(l) {
+      if (l.search[1] === '/' ) {
+        var decoded = l.search.slice(1).split('&').map(function(s) { 
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
+  </script>  
+<script defer="defer" src="/rs-lang/static/js/main.15abfcec.js"></script><link href="/rs-lang/static/css/main.8dbcb980.css" rel="stylesheet"></head><body><div id="app-root"></div></body></html>
