--- a/index.html
+++ b/index.html
@@ -21,4 +21,4 @@
       }
     }(window.location))
   </script>  
-<script defer="defer" src="/rslang/static/js/main.5f4a7580.js"></script><link href="/rs-lang/static/css/main.5661db01.css" rel="stylesheet"></head><body><div id="app-root"></div></body></html>
+<script defer="defer" src="/rs-lang/static/js/main.5f4a7580.js"></script><link href="/rs-lang/static/css/main.5661db01.css" rel="stylesheet"></head><body><div id="app-root"></div></body></html>
