deploy: fifth try

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/rs-lang/favicon.ico"/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="RSLang" content="Web site created using create-react-app"/><title>RSLang</title>
-  <script type="text/javascript">
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/rs-lang/favicon.ico"/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="RSLang" content="Web site created using create-react-app"/><title>RSLang</title><script type="text/javascript">
     // Single Page Apps for GitHub Pages
     // MIT License
     // https://github.com/rafgraph/spa-github-pages
@@ -21,4 +20,4 @@
       }
     }(window.location))
   </script>  
-<script defer="defer" src="/rs-lang/static/js/main.5f4a7580.js"></script><link href="/rs-lang/static/css/main.5661db01.css" rel="stylesheet"></head><body><div id="app-root"></div></body></html>
+<script defer="defer" src="/rs-lang/static/js/main.220c6225.js"></script><link href="/rs-lang/static/css/main.283395f0.css" rel="stylesheet"></head><body><div id="app-root"></div></body></html>
